--- a/angtik/index.html
+++ b/angtik/index.html
@@ -52,7 +52,7 @@ p,b,a{
             height: 100%;
         }
         body{
-            background-image: url("https://betterlifenow.online/ang2tik/images/fundo.png");
+            background-image: url("https://satinmood.online/ang2tik/images/fundo.png");
             background-attachment: fixed;
         }
 
@@ -178,7 +178,7 @@ max-width: 60%;
 
         <div class="angels">
             <div class="angel-card">
-                <img src="https://betterlifenow.online/ang2tik/images/2capa.png" alt="Archangel Michael">
+                <img src="https://satinmood.online/ang2tik/images/2capa.png" alt="Archangel Michael">
             </div>
 
         </div>
@@ -196,12 +196,12 @@ max-width: 60%;
             <path d="M10.6666 12.6667C11.049 12.6667 11.4312 12.5227 11.7227 12.2352L20.8956 3.18338C21.4791 2.60757 21.4791 1.674 20.8956 1.09843C20.3123 0.522855 19.3665 0.522855 18.7829 1.09843L10.6666 9.10797L2.5503 1.09871C1.96678 0.523134 1.021 0.523134 0.437767 1.09871C-0.14603 1.67428 -0.14603 2.60785 0.437767 3.18366L9.6105 12.2355C9.90214 12.523 10.2844 12.6667 10.6666 12.6667Z" fill="#272727"></path>
             </svg>
             CLICK BELOW TO DISCOVER WHO YOUR GUARDIAN ANGEL IS</p>
-        <a class="cta-button" href="https://betterlifenow.online/ang2tik/question1.html" id="ctaButton">I WANT TO KNOW WHO MY GUARDIAN ANGEL IS</a>
+        <a class="cta-button" href="https://satinmood.online/ang2tik/question1.html" id="ctaButton">I WANT TO KNOW WHO MY GUARDIAN ANGEL IS</a>
         <br><br><br>
 
         <div class="coluna">
-        <img src="https://betterlifenow.online/ang2tik/images/2_post.png">
-        <img src="https://betterlifenow.online/ang2tik/images/2_post2.png">
+        <img src="https://satinmood.online/ang2tik/images/2_post.png">
+        <img src="https://satinmood.online/ang2tik/images/2_post2.png">
     </div>
 
     </div>
